Add Javascript functions to fetch and populate data from HN api

--- a/src/views/story.html.twig
+++ b/src/views/story.html.twig
@@ -3,7 +3,12 @@
 {% block content %}
 
   <span id="loading" class="loading">Loading...</span>
-  <table id="itemList">
+  <table id="item">
+    <tbody></tbody>
+  </table>
+  <br>
+  <br>
+  <table id="comments">
     <tbody></tbody>
   </table>
 
