--- a/src/views/layout.html.twig
+++ b/src/views/layout.html.twig
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title '' %} - Hacker News Clone</title>
+        <title>Hacker News Clone</title>
         <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="{{ asset('js/api.js')}}"></script>
     </head>
     <body>
-        {% block content %}{% endblock %}
+      <center>
+        <table id="main" border="0" cellpadding="0" cellspacing="0" width="85%" bgcolor="#f6f6ef">
+          <tbody>
+            <tr class="mainTitleRow">
+              <td bgcolor="#ff6600">
+                <a href="/">Hacker News Clone</a>
+              </td>
+            </tr>
+            <tr id="pagespace" title="" style="height:10px"></tr>
+
+            <tr>
+              <td>
+                {% block content %}{% endblock %}
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <table width="100%" cellspacing="0" cellpadding="1">
+                  <tbody>
+                    <tr>
+                      <td bgcolor="#ff6600"></td>
+                    </tr>
+                  </tbody>
+                </table>
+                <br>
+                <center>
+                  <a href="https://github.com/mariusavram91/hn_clone">Github</a>
+                </center>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </center>
     </body>
 </html>
