Add new stories link

--- a/src/views/layout.html.twig
+++ b/src/views/layout.html.twig
@@ -12,6 +12,7 @@
             <tr class="mainTitleRow">
               <td bgcolor="#ff6600">
                 <a href="/">Hacker News Clone</a>
+                <a href="/new" class="menuItem">new</a>
               </td>
             </tr>
             <tr id="pagespace" title="" style="height:10px"></tr>
